--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: aliyunoss
 description: A new Flutter plugin.
 version: 0.0.1
-author:
-homepage:
+Author:kevin
+homepage:https://github.com/rm9233/aliyunoss.git
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
